Fix compile errors in QuerierTests