@@ -240,12 +240,14 @@ public class QuerierTests extends ESTestCase {
             }
         };
 
-        Cursor.Page page = new Cursor.Page(new TestResultRowSet<NamedWriteable>(List.of(randomHitExtractor(0)), new BitSet(), dataSize),
-            Cursor.EMPTY);
+        Cursor.Page page =
+            new Cursor.Page(
+                new TestResultRowSet<NamedWriteable>(Collections.singletonList(randomHitExtractor(0)), new BitSet(), dataSize),
+                Cursor.EMPTY);
 
         AtomicInteger responses = new AtomicInteger();
         AtomicInteger failures = new AtomicInteger();
-        ActionListener<Cursor.Page> listener = new ActionListener<>() {
+        ActionListener<Cursor.Page> listener = new ActionListener<Cursor.Page>() {
             @Override
             public void onResponse(Cursor.Page page) {
                 responses.getAndIncrement();
